<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center_vertical">


    <TextView
        android:id="@+id/moreOptionsTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/more_options"
        android:textSize="30sp"
        android:layout_marginTop="20dp"
        android:layout_marginStart="8dp"
        android:layout_marginBottom="48dp"
        style="@style/TextAppearance.AppCompat.Title"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <com.google.android.material.button.MaterialButton
            android:id="@+id/editListNameButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginBottom="24dp"
            android:text="@string/edit_list_s_name"/>

        <EditText
            android:id="@+id/name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp" />

    </LinearLayout>


        <com.google.android.material.button.MaterialButton
            android:id="@+id/deleteListButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:layout_marginLeft="8dp"
            android:textAlignment="textStart"
            android:text="@string/delete_list"/>


        <com.google.android.material.button.MaterialButton
            android:id="@+id/deleteAllCompletedTaskButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:layout_marginLeft="8dp"
            android:text="@string/delete_all_completed_tasks"/>
</LinearLayout>