<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/task_item_border"
    android:orientation="horizontal"
    android:paddingBottom="8dp"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:paddingTop="8dp"
    android:clickable="true"
    android:focusable="true"
    android:id="@+id/taskBody" >

    <CheckBox
        android:id="@+id/cbIsDone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical" />

    <ImageView
        android:id="@+id/priorityImageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:background="@android:color/transparent"
        android:adjustViewBounds="true"
        android:maxWidth="48dp"
        android:maxHeight="48dp"
        android:scaleType="fitCenter"
        android:src="@mipmap/ic_priority_high"/>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_weight="1"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tvName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="@string/test_task_item_name" />

        <TextView
            android:id="@+id/tvDescription"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="@string/test_task_item_desc" />

        <TextView
            android:id="@+id/tvPriority"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="@string/test_task_item_priority" />

        <TextView
            android:id="@+id/tvDeadline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="@string/test_task_item_deadline" />
    </LinearLayout>

    <ImageButton
        android:id="@+id/deleteButton"
        android:background="@android:color/transparent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        android:maxWidth="48dp"
        android:maxHeight="48dp"
        android:layout_marginLeft="24dp"
        android:scaleType="fitCenter"
        android:layout_gravity="center_vertical"
        android:src="@mipmap/ic_delete" />
</LinearLayout>